--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "poke-react",
   "version": "0.1.0",
   "private": true,
+	"homepage": "/build",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
